Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17557

accessing non-existing inode turns fs read-only on 5.14

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      because all inodes are treated special since LU-13166 landing

      [   38.925720] LDISKFS-fs error (device dm-0): osd_iget2:520: inode #176: comm mdt00_001: iget: special inode unallocated
      [   38.925723] Aborting journal on device dm-0-8.
      [   38.925752] LustreError: 6725:0:(osd_handler.c:1886:osd_trans_commit_cb()) transaction @0xffff9a5be5fcf200 commit error: 2
      [   38.925799] LDISKFS-fs (dm-0): Remounting filesystem read-only
      

      Attachments

        Activity

          People

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: